--- a/style.css
+++ b/style.css
@@ -443,8 +443,8 @@ h4 {
   border: none;
   background-color: #b9b9b9;
   opacity: 0.7;
-  height: 1rem;
-  width: 1rem;
+  height: 1.6rem;
+  width: 1.6rem;
   border-radius: 50%;
   margin-right: 1.75rem;
   cursor: pointer;
@@ -459,7 +459,7 @@ h4 {
 }
 
 .dots__dot--active {
-  /* background-color: #fff; */
+  /* background-color: white; */
   background-color: #888;
   opacity: 1;
 }
